[gd_scene load_steps=8 format=3 uid="uid://dihw1bwmo6omg"]

[ext_resource type="Script" path="res://scripts/tasks/task_document_sign.gd" id="1_pvf0i"]
[ext_resource type="Texture2D" uid="uid://dcohecbvkrvb6" path="res://imgs/sprites/tasks/hr-signing/document_empty.png" id="2_ur4p1"]
[ext_resource type="StyleBox" uid="uid://c17jcsekrhwk2" path="res://resources/button_stylebox.tres" id="3_e6jb4"]
[ext_resource type="Texture2D" uid="uid://rowl4cchp6gx" path="res://imgs/sprites/tasks/hr-signing/document_signed.png" id="4_y6d7n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fmtq6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p3kxn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hf0ig"]

[node name="Task_Document_Sign" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_pvf0i")
optional = true

[node name="Active" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="unsigned" type="TextureRect" parent="Active"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_ur4p1")

[node name="sign_button" type="Button" parent="Active/unsigned"]
layout_mode = 0
offset_left = 875.0
offset_top = 766.0
offset_right = 1330.0
offset_bottom = 878.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_fmtq6")
theme_override_styles/hover = ExtResource("3_e6jb4")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_p3kxn")
theme_override_styles/normal = SubResource("StyleBoxEmpty_hf0ig")

[node name="signed" type="TextureButton" parent="Active"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_y6d7n")
stretch_mode = 0

[connection signal="pressed" from="Active/unsigned/sign_button" to="." method="_on_sign_button_pressed"]
[connection signal="pressed" from="Active/signed" to="." method="_on_signed_pressed"]
